apps/bentopdf/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: bentopdf
  namespace: bentopdf
spec:
  hostnames:
    - pdf.whyredfire.dev
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: bentopdf
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
